WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274186
Occasional crash in `WebViewImpl::setMarkedText` (`com.apple.WebKit: _ZN6WebKit11WebViewImpl13setMarkedTextEP11objc_object8_NSRangeS3_`)
https://bugs.webkit.org/show_bug.cgi?id=274186
Summary
Occasional crash in `WebViewImpl::setMarkedText` (`com.apple.WebKit: _ZN6WebK...
Richard Robinson
Reported
2024-05-14 15:29:53 PDT
rdar://127658062
Attachments
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2024-05-14 15:35:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28569
EWS
Comment 2
2024-05-14 20:52:19 PDT
Committed
278792@main
(b33075ac6c0e): <
https://commits.webkit.org/278792@main
> Reviewed commits have been landed. Closing PR #28569 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug