Occasional crash in `WebViewImpl::setMarkedText` (`com.apple.WebKit: _ZN6WebKit11WebViewImpl13setMarkedTextEP11objc_object8_NSRangeS3_`) https://bugs.webkit.org/show_bug.cgi?id=274186 rdar://127658062

Reviewed by Abrar Rahman Protyasha.

The existing logic to ensure that `setWritingSuggestions` only gets called when `string` is an
`NSAttributedString` was flawed in some cases (when `m_isHandlingAcceptedCandidate == true` and `hasTextCompletion == false`).
This resulted in `-[NSAttributedString string]` being called on an `NSString`, causing a crash.

* Source/WebKit/UIProcess/mac/WebViewImpl.mm:
(WebKit::WebViewImpl::setMarkedText):
* Tools/TestWebKitAPI/Tests/mac/WKWebViewMacEditingTests.mm:
(-[SetMarkedTextWithNoAttributedStringTestCandidate initWithReplacementString:inRange:]):
(-[SetMarkedTextWithNoAttributedStringTestCandidate replacementString]):
(-[SetMarkedTextWithNoAttributedStringTestCandidate resultType]):
(-[SetMarkedTextWithNoAttributedStringTestCandidate range]):
(TEST(WKWebViewMacEditingTests, SetMarkedTextWithNoAttributedString)):

Canonical link: https://commits.webkit.org/278792@main